--- a/templates/index.html
+++ b/templates/index.html
@@ -13,10 +13,12 @@
         <div>
             <h1 class="logo"><a href="{% url 'index' %}">Django Auth Example</a></h1>
             {% if user.is_authenticated %}
-                <p>你已登录，欢迎你：<a href="#">{{ user.username }}</a></p>
+                <p>你已登录，欢迎你：{{ user.username }}</p>
+                <button class="btn btn-default"><a href="{% url 'logout' %}?next={{ request.path }}">注销登录</a></button>
+                <button class="btn btn-default"><a href="{% url 'password_change' %}">修改密码</a></button>
             {% else %}
                 <p>你还没有登录，请
-                    <button class="btn btn-default"><a href="{% url 'login' %}">登录</a></button>
+                    <button class="btn btn-default"><a href="{% url 'login' %}?next={{ request.path }}">登录</a></button>
                     或者
                     <button class="btn btn-default"><a href="{% url 'users:register' %}">注册</a></button>
                 </p>
