--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>登录</title>
-    <link rel="stylesheet" href="https://unpkg.com/mobi.css/dist/mobi.min.css">
+    <title>网络大数据智能分析系统（IDA）</title>
+    <link rel="stylesheet" href="/static/css/mobi.min.css">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <style>
         .errorlist {
             color: red;
@@ -13,28 +14,43 @@
     </style>
 </head>
 <body>
-<div class="flex-center">
+<div class="body">
+    <div class="flex-center" style="padding: 50px">
+        <img src="/static/img/logo-login.png" width=80% height=80% />
+    </div>
     <div class="container">
         <div class="flex-center">
-            <div class="unit-1-2 unit-1-on-mobile">
-                <h3>登录</h3>
-                <form class="form" action="{% url 'login' %}" method="post">
+            <div class="unit-1-2" style="padding: 250px 10px 10px">
+                <form class="bs-example bs-example-form" role="form" action="{% url 'login' %}" method="post">
                     {% csrf_token %}
-                    {{ form.non_field_errors }}
-                    {% for field in form %}
+<!--                     {% for field in form %}
                         {{ field.label_tag }}
                         {{ field }}
                         {{ field.errors }}
                         {% if field.help_text %}
                             <p class="help text-small text-muted">{{ field.help_text|safe }}</p>
                         {% endif %}
-                    {% endfor %}
+                    {% endfor %} -->
+                    <div class="input-group">
+                        <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
+                        <input class="form-control" type="text" name="username" autofocus="" maxlength="254" required="" id="id_username">
+                        {{ form.username.errors }}
+                    </div>
+                    <br>
+                    <div class="input-group">
+                        <span class="input-group-addon">
+                            <span class="glyphicon glyphicon-lock"></span>
+                        </span>
+                        <input class="form-control" type="password" name="password" required="" id="id_password">
+                        {{ form.password.errors }}
+                    </div>
                     <button type="submit" class="btn btn-primary btn-block">登录</button>
                     <input type="hidden" name="next" value="{{next}}"/>
+                    {{ form.non_field_errors }}
                 </form>
                 <div class="flex-left top-gap text-small">
-                    <div class="unit-2-3"><span>没有账号？<a href="{% url 'users:register' %}">立即注册</a></span></div>
-                    <div class="unit-1-3 flex-right"><span><a href="{% url 'password_reset' %}">忘记密码？</a></span></div>
+                    <div class="unit-2-3"><span style="background: #ffffff">没有账号？<a href="{% url 'users:register' %}">立即注册</a></span></div>
+                    <div class="unit-1-3 flex-right"><span><a style="background: #ffffff" href="{% url 'password_reset' %}">忘记密码？</a></span></div>
                 </div>
             </div>
         </div>
